--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "i": "^0.3.7",
+    "npm": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux-localstorage-simple": "^2.5.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
